--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
