--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "es-toolkit": "^1.39.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.8.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
